tests/snapshots/golden_snapshot_tests__golden_work_order_with_context.snap
---
source: tests/golden_snapshot_tests.rs
expression: wo
---
{
  "id": "[uuid]",
  "task": "Fix the login bug",
  "lane": "patch_first",
  "workspace": {
    "root": ".",
    "mode": "staged",
    "include": [],
    "exclude": []
  },
  "context": {
    "files": [
      "src/main.rs"
    ],
    "snippets": [
      {
        "name": "style",
        "content": "Use 4-space indentation"
      },
      {
        "name": "rules",
        "content": "No unsafe code"
      }
    ]
  },
  "policy": {
    "allowed_tools": [],
    "disallowed_tools": [],
    "deny_read": [],
    "deny_write": [],
    "allow_network": [],
    "deny_network": [],
    "require_approval_for": []
  },
  "requirements": {
    "required": []
  },
  "config": {
    "model": null,
    "vendor": {},
    "env": {},
    "max_budget_usd": null,
    "max_turns": null
  }
}
