tests/snapshots/golden_snapshot_tests__golden_work_order_with_requirements.snap
---
source: tests/golden_snapshot_tests.rs
expression: wo
---
{
  "id": "[uuid]",
  "task": "Fix the login bug",
  "lane": "patch_first",
  "workspace": {
    "root": ".",
    "mode": "staged",
    "include": [],
    "exclude": []
  },
  "context": {
    "files": [],
    "snippets": []
  },
  "policy": {
    "allowed_tools": [],
    "disallowed_tools": [],
    "deny_read": [],
    "deny_write": [],
    "allow_network": [],
    "deny_network": [],
    "require_approval_for": []
  },
  "requirements": {
    "required": [
      {
        "capability": "streaming",
        "min_support": "native"
      },
      {
        "capability": "tool_bash",
        "min_support": "emulated"
      },
      {
        "capability": "extended_thinking",
        "min_support": "native"
      }
    ]
  },
  "config": {
    "model": null,
    "vendor": {},
    "env": {},
    "max_budget_usd": null,
    "max_turns": null
  }
}
