tests/snapshots/golden_snapshot_tests__golden_workspace_mode_passthrough.snap
---
source: tests/golden_snapshot_tests.rs
expression: "WorkspaceMode::PassThrough"
---
"pass_through"
